[package]
name = "rust-log"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3.31"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
